# yggdrasil-schema

./: .gitignore  README.org  cabal.project  flake.nix  stack.yaml  yggdrasil-schema.cabal  yggdrasil.cabal
.github/workflows/: byggsteg.yaml  hackage.yaml
resources/test/migration-files/: 0-yggdrasil.sql  1-some-valid-sql.sql  2-more-valid-sql-$$.sql
src/: Yggdrasil.hs
test/: Spec.hs
test/Yggdrasil/Test/: Yggdrasil.hs
