cabal-version: 1.12

name:           yggdrasil
version:        1.0.0.0
description:    Please see the README at <https://github.com/jjba23/yggdrasil>
homepage:       https://github.com/jjba23/yggdrasil
bug-reports:    https://github.com/jjba23/yggdrasil/issues
author:         Josep Bigorra
maintainer:     Josep Bigorra <jjbigorra@gmail.com>
copyright:      2024 Josep Bigorra
license:        LGPL-3
build-type:     Simple
                
extra-source-files:
    README.org

source-repository head
  type: git
  location: https://github.com/jjba23/yggdrasil

library
  exposed-modules:
      Yggdrasil
  other-modules:
      Paths_yggdrasil
  hs-source-dirs:
      src
  ghc-options: -Wall -threaded
  default-extensions:
      DataKinds
      DefaultSignatures
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      TypeFamilies
      ViewPatterns

  build-depends:
      aeson
    , async
    , base < 5
    , bytestring
    , keys
    , mtl
    , optics
    , optparse-applicative
    , relude
    , time
    , text
    , containers
    , filepath
    , directory
    , random
    , uuid
    , neat-interpolation
    , sqlite-simple
  default-language: GHC2021


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs      
  other-modules:
      Paths_yggdrasil
      Yggdrasil.Test.Yggdrasil
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-T -N"
  default-extensions:
      DataKinds
      DefaultSignatures
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      TypeFamilies
      ViewPatterns

  build-depends:
      aeson
    , async
    , base < 5
    , bytestring
    , keys
    , mtl
    , optics
    , optparse-applicative
    , relude
    , random
    , time
    , text
    , containers
    , filepath
    , directory
    , uuid
    , neat-interpolation
    , sqlite-simple
    , hspec
    , QuickCheck
    , tasty 
    , tasty-hspec
    , yggdrasil
  default-language: GHC2021


  
